--- a/src/style.css
+++ b/src/style.css
@@ -67,20 +67,26 @@ button {
     background: #fff;
 }
 
-.modal > h1 {
+.modal>h1 {
     text-align: center;
 }
 
 .modal .modal-content {
     padding: 1rem;
-  }
+}
 
 .mui--text-black-54.mui--text-body1 {
     margin-top: 50px;
 }
+
 .mui--text-black-54.mui--text-body2 {
     margin-top: 50px;
 }
+
 .mui-divider {
     margin-bottom: 30px;
+}
+
+.error {
+    color: red;
 }
